<resources>
    <string name="app_name">GymFitnessPro</string>
    <string name="skip">Skip</string>
    <string name="Temps_of_use">Terms of Use and Privacy Policy.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_community">A community for you, challenge yourself</string>
    <string name="some_id">16:04</string>
    <string name="enter_your_">Enter your email address</string>
    <string name="email_exam">example@example.com</string>
    <string name="continue1">Continue</string>
    <string name="forgotten_p">Forgotten Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="example_exa">example@example.com</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua.
    </string>
    <string name="arrow">Arrow</string>
    <string name="set_password">Set Password</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_n_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_n_magna_aliqua">Lorem
        ipsum dolor sit amet, consectetur adipiscing elit,\n sed do eiusmod tempor incididunt ut
        labore et dolore\n magna aliqua.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_pass">*************</string>
    <string name="reset_password">Reset Password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="default_web_client_id">498768445437-c6a1g5u8ornikcf95p13id9vi8uddt6s.apps.googleusercontent.com</string>


    <string name="facebook_app_id">494915659910255</string>
    <string name="fb_login_protocol_scheme">fb494915659910255</string>
    <string name="facebook_client_token">c2e2adab3b0e2c7b2a479bcf8a4dcd61</string>


    <!--================================================================================================================-->
    <!--Fragment Goal-->
    <string name="lose_weight">Lose Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="muscle_mass_gain">Muscle Mass Gain</string>
    <string name="what_is_your_goal">What Is Your Goal?</string>
    <string name="shape_body">Shape Body</string>
    <string name="others">Others</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="full_name">Full name</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="start">Start</string>
    <string name="my_profile">My Profile</string>

    <string name="generalNotification">General Notification</string>
    <string name="sound">Sound</string>
    <string name="dontDisturbMode">Don’t Disturb Mode</string>
    <string name="vibrate">Vibrate</string>
    <string name="lockScreen">Lock Screen</string>">
    <string name="reminders">Reminders</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="password_setting">Password Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="search">Search</string>
    <string name="top_searches">Top Searches</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="_00_30">00:30</string>
    <string name="dumbbell_rows">Dumbbell Rows</string>
    <string name="repetition_3x">repetition 3x</string>
    <string name="icon_search">icon search</string>
    <string name="icon_notify">icon notify</string>
    <string name="icon_user">icon user</string>
    <string name="round_1">Round 1</string>
    <string name="round_2">Round 2</string>
    <string name="back_to_before">Back to before</string>
    <string name="beginner">Beginner</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet?</string>
    <string name="congratulation">Congratulation</string>
    <string name="go_to_the_next_workout">Go to the next Workout</string>
    <string name="home">Home</string>
    <string name="moderate">Moderate</string>
    <string name="_300_calorie">300 Calorie</string>
    <string name="_2_hours">2 Hours</string>
    <string name="progress_tracking">Progress tracking</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>