<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/a_forgotten"
    android:layout_width="393dp"
    android:layout_height="852dp"
    android:background="@drawable/a_forgotten"
    android:clipToOutline="true">

    <TextView
        android:id="@+id/forgotten_p"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:gravity="center_vertical"
        android:text="@string/forgotten_p"
        android:textAppearance="@style/forgotten_p" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="183dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:gravity="center_vertical"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass" />

    <TextView
        android:id="@+id/lorem_ipsum"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="254dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/lorem_ipsum"
        android:textAppearance="@style/lorem_ipsum" />

    <RelativeLayout
        android:id="@+id/rectangle_1"
        android:layout_width="394dp"
        android:layout_height="122dp"
        android:layout_centerInParent="true"
        android:background="#B3A0FF"
        android:padding="16dp">

        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edt_enter_your_"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/enter_your_"
            android:textAppearance="@style/enter_your_" />

        <EditText
            android:id="@+id/edt_enter_your_"
            android:layout_width="311dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"

            android:background="@drawable/edit_text_background" />
    </RelativeLayout>

    <Button
        android:id="@+id/gradient_bu"
        android:layout_width="178.56dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="501dp"
        android:background="@drawable/rectangle_2"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/continue1"
        android:textAppearance="@style/enter_your_" />


</RelativeLayout>
