<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="6dp"
            android:layout_height="11dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="39dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/arrow"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-41dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/set_password"
            android:textColor="@color/limegreen"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginTop="76dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:fontFamily="@font/league_spartan"
        android:textColor="#CECCCC"
        android:textSize="12.6sp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_n_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_n_magna_aliqua" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginTop="50dp"
        android:background="@color/lightpurple"
        android:layout_below="@id/textView10">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginStart="47dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:fontFamily="@font/league_spartan"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hint_pass"
            android:layout_marginHorizontal="47dp"
            android:background="@drawable/custom_textview"
            android:layout_below="@+id/textView11"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:layout_marginTop="7dp"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="47dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/league_spartan"
            android:textStyle="bold"
            android:layout_below="@id/edt_password"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hint_pass"
            android:layout_marginHorizontal="47dp"
            android:background="@drawable/custom_textview"
            android:layout_below="@+id/textView12"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:layout_marginTop="7dp"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetPassword"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        android:layout_below="@id/rl1"
        android:layout_marginTop="46dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>