<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".fragments.authentication.ForgottenPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Back Button-->
        <ImageView
            android:id="@+id/fp_img_backArrow"
            android:layout_width="6dp"
            android:layout_height="11dp"
            android:src="@drawable/arrow"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="71dp" />
        <!--Main title-->
        <TextView
            android:id="@+id/fp_tv_mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/forgotten_p"
            android:textAppearance="@style/forgotten_p"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="62dp" />
        <!--Sub title-->
        <TextView
            android:id="@+id/fp_tv_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="199dp" />
        <!--Lorem-->
        <TextView
            android:id="@+id/fp_tv_input"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="254dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B3A0FF"
        tools:layout_editor_absoluteX="-1"
        tools:layout_editor_absoluteY="333dp"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:paddingLeft="51dp"
        android:paddingTop="25dp"
        android:paddingBottom="26dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fp_tv_enter_your"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/fp_tv_enter_your"
            android:text="@string/enter_your_" />

        <EditText
            android:id="@+id/fp_edt_enter_your"
            android:layout_width="311dp"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:layout_width="178dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_button_forgotten_password"
        android:text="@string/continue1" />
</LinearLayout>