<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/groupcup" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:background="@drawable/border_linear_layout"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/congratulation"
            android:textColor="#232323"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/nen_trang_bo_vien"
            android:orientation="horizontal" >
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_hours"/>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_time"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">
                <TextView
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_300_calorie"/>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_calories"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">
                <TextView
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderate"/>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_workout"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_go_go"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_mau_xanh"
        android:text="@string/go_to_the_next_workout"
        app:backgroundTint="@null" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_home"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_below="@id/btn_go_go"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_mau_vang"
        android:text="@string/home"
        android:textColor="#896CFE"
        app:backgroundTint="@null" />


</RelativeLayout>