<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="6dp"
            android:layout_height="11dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="9dp"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/set_password"
            android:layout_width="138dp"
            android:layout_height="30dp"
            android:layout_marginLeft="84dp"
            android:gravity="center"
            android:lineHeight="30dp"
            android:text="@string/set_password"
            android:textColor="@color/limegreen"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/lorem_ipsum"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/league_spartan"
        android:gravity="center_horizontal|center_vertical"
        android:lineHeight="11dp"
        android:lineSpacingExtra="1sp"
        android:text="@string/lorem_ipsum"
        android:textAppearance="@style/lorem_ipsum"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/linear_reset_password"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_below="@id/lorem_ipsum"
        android:layout_marginTop="39dp"
        android:background="@color/lightpurple"
        android:orientation="vertical">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/league_spartan"
            android:gravity="center_vertical"
            android:lineHeight="17dp"
            android:text="@string/password"
            android:textSize="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/textView11"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/custom_textview"
            android:gravity="center_vertical"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:lineHeight="14dp"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/league_spartan"
            android:gravity="center_vertical"
            android:lineHeight="17dp"
            android:text="@string/confirm_password"
            android:textSize="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/textView11"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/custom_textview"
            android:gravity="center_vertical"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:lineHeight="14dp"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="46dp"
        android:gravity="center"
        android:layout_below="@+id/linear_reset_password">

        <Button
            android:id="@+id/button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/poppins"
            android:lineHeight="27dp"
            android:text="@string/reset_password"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>


</RelativeLayout>